src/main/resources/site/parts/landinginfo/css/landinginfo.module.css
.heroContainer {
    display:flex;
    flex-direction: row;
    align-items: center;
    justify-content: center;
    min-height: 85vh;
    min-width:100vw;
    background-image: url("https://i.imgur.com/u3skrQl.jpg");
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;
    padding: 0 0 0 0;
    margin: 0 0 0 0;
}

.heroLeft {
    width: 100%;
    max-width: 700px;
    height: 100%;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    /* text-align: center; */
    padding: 0 0 0 0;
    margin: 2rem 0;
    z-index: 100;
}
.heroRight {
    position: relative;
    width: 100%;
    max-width: 1300px;
    height: 100%;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    text-align: center;
    padding: 0 0 0 0;
    margin: 0 0 0 0;
    overflow: visible;
    min-height: 50vh;
    z-index: 10;
}
.heroImage {
    width: 80%;
    object-fit: cover;
    object-position: center;
    position: absolute;
    bottom: 0;
}


.heroTitle {
    font-size: 2.5rem;
    font-weight: 700;
    color: #212427;
    margin: 0 0 1rem 0;
    padding: 0 0 0 0;
}
.heroText {
    font-size: 1.5rem;
    font-weight: 400;
    color: #212427;
    margin: 0 0 0 0;
    padding: 0 0 0 0;
    max-width: 80%;
}
.buttonContainer {
    width: 100%;
    display: flex;
    flex-direction: row;
    justify-content: space-evenly;
    align-items: center;
    text-align: center;
    margin: 1rem;
    padding: 0 0 0 0;
}
.buttonContainer a {
    /* margin: 0.5rem; */
}

@media screen and (max-width: 768px) {
    .heroContainer {
        justify-content: space-between;
        flex-direction: column;
    }
    .heroLeft {
        min-height: 15rem;
        flex-grow: 1;
    }
}

/* target desktop */
@media screen and (min-width: 769px) {
    .heroLeft {
        padding:2rem;
        /* text-align: justify; */
    }
    .heroRight {
        min-height:85vh;
    }
}

/* target screens between 766px and 600px */
@media screen and (max-width: 766px) and (min-width: 600px) {
    /* add a background effect to the container so the text is visible even when a dark image is shown behind it */
    .heroLeft {
        background-color: rgba(255, 255, 255, 0.8);
    }
}

/* for screens larger than 1700px, make the image width max 65% */
@media screen and (min-width: 1700px) {
    .heroImage {
        width: 60%;
    }
}

